# Photoshop

./: .gitignore  CMakeLists.txt  Makefile  README.md
.cache/clangd/index/: actions.cpp.9EC6C7A295FAEA23.idx  actions.hpp.3A6847509EC3270E.idx  api_actions.hpp.1AA2DEC0CAA819FE.idx  api_bar.hpp.C9AD594F85D14ED9.idx  api_canvas.hpp.247877760E7CC487.idx  api_memento.hpp.2866770460A369BF.idx  api_photoshop.hpp.66D4513A561A83D0.idx  api_sfm.hpp.52B41295058BD917.idx  api_system.cpp.A0F208F4FCC679C3.idx  api_system.hpp.2094BECF205689E6.idx  bar.cpp.E31586EDDC52E5B3.idx  bar.hpp.A0541583A74A57D8.idx  barelief.cpp.168ED11AAEEC82C9.idx  barelief.hpp.835D35B774E24DFA.idx  blur.cpp.6694497EB1BDBD10.idx  blur.hpp.7FB68ACBD614C052.idx  brightness.cpp.440EA1BE7F695746.idx  brightness.hpp.4FF1E4AB2F5AF0FE.idx  brush.cpp.64F791F606F5995C.idx  brush.hpp.A09BBC30D4E29CFD.idx  button.cpp.0B6FCA818CA5DBA7.idx  button.hpp.3E97C9A3A9408962.idx  canvas.cpp.6E92ECC79F1EC259.idx  canvas.cpp.B5DF8A412B18B455.idx  canvas.hpp.3F91C671082A927F.idx  colors.cpp.7759B1412A2A847F.idx  control_panel.cpp.7244511C9DC61E8E.idx  control_panel.hpp.CA34738EF1515D82.idx  controller.cpp.6D19CF472EE5D3A9.idx  controller.hpp.F138327F8BF196D1.idx  ellipse.cpp.0783268D12AA7085.idx  ellipse.hpp.BDD7634FD1E9F2D9.idx  eraser.cpp.9361171174CE71A0.idx  eraser.hpp.E8210F066903B810.idx  file.cpp.13698DD39B953F3D.idx  file.hpp.C8234785E1EA88FC.idx  fill_menu.cpp.2C2434CBB36AAF1F.idx  fill_menu.hpp.708EA061B673B35D.idx  gauss_blur.cpp.8808D705D05C7480.idx  gauss_blur.hpp.6EC7677475DFAAD7.idx  (+38 more)
api/: api_actions.hpp  api_bar.hpp  api_canvas.hpp  api_memento.hpp  api_photoshop.hpp  api_sfm.hpp  api_system.hpp  plugin_example.hpp
arman/: makefile
arman/plugins/basReliefFilter/: basReliefFilter.cpp
arman/plugins/blurFilter/: blurFilter.cpp
arman/plugins/brush/: brush.cpp
arman/plugins/line/: line.cpp
arman/plugins/negativeFilter/: negFilter.cpp
arman/plugins/pluginLib/bars/: menu.cpp
arman/plugins/pluginLib/filters/: filterWindows.cpp  slider.cpp
arman/plugins/pluginLib/slider/: slider.cpp
arman/plugins/rectangle/: rectangle.cpp
arman/plugins/spray/: spray.cpp
arman/plugins/unsharpMaskFilter/: unsharpMaskFilter.cpp
headers/: windows_id.hpp
headers/api_impl/: actions.hpp  bar.hpp  canvas.hpp  memento.hpp  scroll.hpp  sfm.hpp  windows.hpp
headers/api_impl/bar/: bar.hpp  button.hpp  options.hpp
headers/controller/: controller.hpp
headers/gui/: window_manager.hpp
headers/model/: layer.hpp  model.hpp
headers/plugins/: plugins.hpp
headers/sys/: my_exceptions.hpp  plugins.hpp
plugins/: barelief_filter.cpp  barelief_filter.hpp  bluer_filter.cpp  bluer_filter.hpp  brightness_filter.cpp  brightness_filter.hpp  brush.cpp  brush.hpp  canvas.cpp  conrast_filter.hpp  contrast_filter.cpp  ellipse.cpp  ellipse.hpp  eraser.cpp  eraser.hpp  filter.cpp  filter.hpp  gauss_bluer_filter.cpp  gauss_bluer_filter.hpp  instrumentsbar.cpp  libtest_plugin.dylib  line.cpp  line.hpp  menubar.hpp  negative_filter.cpp  negative_filter.hpp  optionsbar.cpp  rectangle.cpp  rectangle.hpp  test_plugin.cpp  toolbar.cpp  toolbar.hpp
plugins/blurFilter/: blurFilter.cpp  blurFilter.hpp
plugins/menubar/: control_panel.cpp  control_panel.hpp  file.cpp  file.hpp  fill_menu.cpp  fill_menu.hpp  filters.cpp  filters.hpp  layer.cpp  layer.hpp  menu_items.cpp  menu_items.hpp  menubar.cpp  menubar.hpp  tools.cpp  tools.hpp
plugins/menubar/filters/: barelief.cpp  barelief.hpp  blur.cpp  blur.hpp  brightness.cpp  brightness.hpp  contrast.cpp  contrast.hpp  gauss_blur.cpp  gauss_blur.hpp  negative.cpp  negative.hpp  unsharp_mask.cpp  unsharp_mask.hpp
plugins/negativeFilter/: negFilter.cpp  negFilter.hpp
plugins/optionsbar/: optionsbar.cpp  optionsbar.hpp
plugins/toolbar/: brush.cpp  brush.hpp  ellipse.cpp  ellipse.hpp  eraser.cpp  eraser.hpp  line.cpp  line.hpp  ps_button.cpp  ps_button.hpp  rectangle.cpp  rectangle.hpp  toolbar.cpp  toolbar.hpp
src/: main.cpp
src/api_impl/: actions.cpp  api_system.cpp  bar.cpp  canvas.cpp  colors.cpp  memento.cpp  scroll.cpp  sfm.cpp  windows.cpp
src/api_impl/bar/: bar.cpp  button.cpp  options.cpp
src/controller/: controller.cpp
src/gui/: window_manager.cpp
src/model/: layer.cpp  model.cpp
src/plugins/: plugins.cpp
src/sys/: my_exceptions.cpp  plugins.cpp
